syntax = "proto3";

package xmc.srv.account.account;

import "google/protobuf/wrappers.proto";

option go_package = "account";

service AccountsService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}
}

enum Type {
  USER = 0;
  SERVICE = 1;
}

message TypeValue {
  Type value = 1;
}

message Account {
  string uuid = 1;

  // service or user
  Type type = 2;

  // username, service name etc
  string client_id = 3;

  // password
  string client_secret = 4;

  // name
  string name = 11;

  // only for services
  string owner_uuid = 8;
  string callback_url = 9;
  bool is_first_party = 10;
  bool is_public = 13;
  string scope = 12;

  // unix timestamps
  int64 created_at = 6;
  int64 updated_at = 7;

  string role_id = 14;
}

message CreateRequest {
  // uuid will be generated always
  Account account = 1;
}

message CreateResponse {
  // for services
  string client_id = 1;
  string client_secret = 2;
  string uuid = 3;
}

message ReadRequest {
  string uuid = 1;
}

message ReadResponse {
  Account account = 1;
}

message GetRequest {
  string client_id = 1;
}

message GetResponse {
  Account account = 1;
}

message UpdateRequest {
  string uuid = 1;
  string client_secret = 2;
  string callback_url = 3;
  string name = 4;
  string scope = 5;
  string role_id = 6;
}

message UpdateResponse {
}

message DeleteRequest {
  string uuid = 1;
}

message DeleteResponse {
}

message SearchRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string client_id = 3;
  TypeValue type = 4;
  string owner_uuid = 5;
  string callback_url = 6;
  string name = 7;
  google.protobuf.BoolValue is_public = 8;
  string role_id = 9;
}

message SearchResponse {
  repeated Account accounts = 1;
}
